--- a/style/style.css
+++ b/style/style.css
@@ -57,7 +57,7 @@ header > h1{
 header > p{
     max-width: 450px;
     margin: auto;
-    margin-bottom: 20px;
+    padding-bottom: 50px;
     padding-right: 10px;
     padding-left: 10px;
     font-family: var(--fonte-padrao);
